tests/multiubuntu/test-cases/TC_05/TC_05_egress_toCIDRs_toPorts_single_port.json
[{
	"verdict": "FORWARDED",
	"IP": {
		"source": "10.0.1.10",
		"destination": "143.248.36.38",
		"ipVersion": "IPv4"
	},
	"l4": {
		"TCP": {
			"source_port": 42908,
			"destination_port": 8000
		}
	},
	"source": {
		"namespace": "multiubuntu",
		"labels": [
			"k8s:container=ubuntu-5",
			"k8s:group=group-1"
		],
		"pod_name": "ubuntu-5-deployment-5ff5974cd4-pp8ef"
	},
	"destination": {
		"identity": 2,
		"labels": [
			"reserved:world"
		]
	}
}]
