tests/multiubuntu/test-cases/TC_05/TC_05_egress_toCIDRs_toPorts_single_port.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-gagqzgqqlfgrcxd
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-5
      group: group-2
  egress:
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
    toCIDR:
    - 143.248.36.38/32
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-urspqmknzjfnuqt
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-5
      group: group-2
  ingress:
  - fromCIDR:
    - 143.248.36.38/32
---
